# frameclassifier

./: .gitignore  Cargo.toml  Frame Classifier.dmg  Info.plist  Makefile  icon.icns
.github/workflows/: release.yml
src/: app.rs  main.rs  project.rs  utils.rs
src/views/: home.rs  label.rs  list.rs  mod.rs
