[package]
name = "classroom"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = "0.93.3"
rfd = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-bundle = "0.6.0"
egui = "0.29.1"
eframe = "0.29.1"
egui-dropdown = "0.11.0"
egui_autocomplete = { git = "https://github.com/linuseing/egui_autocomplete.git" }

[package.metadata.bundle]
name = "Frame Classifier"
identifier = "com.linuseing.frameclassifier"
version = "1.0.0"
resources = []
copyright = "Copyright (c) Your Name 2024"
category = "Video"
short_description = "Frame Classifier Application"
osx_minimum_system_version = "10.13"
plist_extra = { "LSUIElement" = false }
icon = ["icon.icns"]
